--- a/HTML/index.html
+++ b/HTML/index.html
@@ -21,15 +21,15 @@
             <img src = "/Images/cct.png">
         </div>
         <div class="header-right">
-            <button>Home</button>
-            <button>Portfolio</button>
-            <button>Blog</button>
-            <button>Pages</button>
-            <button>Contact</button>
-            <img src = "/Images/github_1.png">
-            <img src = "/Images/fb_1.png">
-            <img src = "/Images/linkedin_1.png">
-            <img src = "/Images/x.png">
+            <a href = "index.html">Home</a>
+            <a href = "portfolio.html">Portfolio</a>
+            <a href= "blog.html">Blog</a>
+            <a href = "pages.html">Pages</a>
+            <a href = "contact.html">Contact</a>
+            <a href = "https://github.com/alunyapatrick2022"><img src = "/Images/github_1.png" alt = "github" title = "GITHUB"></a>
+            <a href = "https://www.facebook.com/profile.php?id=100087308284127"><img src = "/Images/fb_1.png" alt = "facebook" title = "FACEBOOK"></a>
+            <a href = "linkedin-link"><img src = "/Images/linkedin_1.png" alt = "linkedin" title = "LINKEDIN"></a>
+            <a href = "https://twitter.com/mrkuulit"><img src = "/Images/x.png" alt = "twitter" title = "TWITTER"></a>
         </div>
     </header>
     <main>
@@ -38,14 +38,14 @@
                 <h1 id = "header1">CodeCore Technologies</h1>
                 <div class="social-media-links">
                     <div></div>
-                        <div class = "sm-buttons">
-                        <button id = "link1"> Instagram | </button> 
-                        <button id="link2" href = "linkedin-link"> Linkedin | </button><br>
-                        <button id ="link3" href = "linkedin-link"> Github | </button> 
-                        <button id ="link4" href = "twitter-link"> Twiiter  </button>
+                        <div class = "social">
+                        <a href = "https://www.instagram.com/pat.rickalunyaokeno/"> Instagram | </a> 
+                        <a href ="linkedin"> Linkedin | </a><br>
+                        <a href ="https://github.com/alunyapatrick2022"> Github | </a> 
+                        <a href ="https://twitter.com/mrkuulit"> Twitter</a>
                         </div>    
                 </div>
-                <button class = "contact-us" >Contact Us </button>
+                <div class = "contact-us"><a href = "contact-us" >Contact Us </a></div> 
             </div>
             <div>
                 <img src = "/Images/hero5.png">
@@ -58,12 +58,12 @@
                 Web Development <br>
                 and Website UI/UX Designing using...
                 </p>
-                <button>Learn More </button>
+                <a href = "learn-more-link">Learn More </a>
             </div>
         </section>
         <section class="services">
             <div>
-                <h3 id ="header3">Services</h3><br>
+                <a href = "services-link">Services</a>
                 <h4 id="header4">What We Do Best</h4>
                 <p>When you need a UI/UX Web Design<br>
                     and a coded Website using the best Web Technologies,<br>
@@ -72,34 +72,34 @@
             </div>
             <div class="services-box">
                 <div>
-                    <button class = "icon">
+                    <a href = "icon">
                         <img src = "/Images/pen.tool-icon.png"><br>
                         <p class = "p">UI/UX DEISGN <br><br> 3 Projects<br><br></p><br><br>
                         <p class = "p1">9+<br>
                             Years Of Experience</p>
-                    </button>
+                    </a>
                 </div>
                 <div>
-                    <button class = "icon1">
+                    <a href = "icon1">
                         <img src = "/Images/web.dev-icon.png"><br><br>
                         <p class = "p2">Web Development <br> 2 Projects</p><br><br>
                         <p class = "p3">2<br>
                             Satisfied Customers</p>
-                    </button>
+                    </a>
                 </div>
                 <div>
-                    <button class = "icon2">
+                    <a href = "icon2">
                     <img src = "/Images/web.research-icon.png"><br><br>
                     <p class = "p4">Web Research<br>3 Projects</p><br><br>
                     <p class = "p5">50<br>
                         Design Items</p>
-                    </button>
+                    </a>
                 </div>
             </div> <br><br>
         </section>
         <section class = "portfolio">
             <div>
-                <h3 id ="header5">Portfolio</h3><br>
+                <a href = "portfolio-link">Portfolio</a>
                 <h4 id="header6">What We Do Best</h4><br>
                 <p>When you need a UI/UX Web Design<br>
                     and a coded Website using the best Web Technologies,<br>
@@ -107,10 +107,10 @@
              </div><br><br>
             <div class="navigation-links">
                 <div >
-                        <button class ="display-all"> All</button> 
-                        <button class ="display-ui"> UI/UX </button> 
-                        <button class ="display-webDevelopment"> Web Development </button> 
-                        <button class="display-webResearch">Web Research</button>    
+                    <button class ="display-all"> All</button> 
+                    <button class ="display-ui"> UI/UX </button> 
+                    <button class ="display-webDevelopment"> Web Development </button> 
+                    <button class="display-webResearch">Web Research</button>    
                 </div>
             </div>
             <div  class="imageGallery">
@@ -122,23 +122,23 @@
         </section>
         <section class="contact">
             <div>
-                <h3 id ="header7">CONTACT US</h3><br>
+                <a href = "contact-link">Contact Us</a>
                 <h4 id="header8">Want to reach us?</h4>
                 <p>We have a variety of channels below,<br>
                    Please find us with and it will be our pleasure reaching you.</p>
             </div>
             <div class="contact-box">
-                <div><button class = "gmail"><img src = "/Images/fb_1.png" alt = "fb-icon" title = "FACEBOOK"><p>patrickalunya106@gmail.com</p></button></div>
-                <div><button class = "phone"><img src = "/Images/phone-me_1.png" alt = "Phone" title = "Phone"><p>+254115348341</p></button></div>
-                <div><button class = "linkedin"><img src = "/Images/linkedin_1.png" alt = "linkedin-icon" title = "Linkedin"><p>Patrick Alunya</p></button></div>
-                <div><button class = "twitter"><img src = "/Images/x.png" alt = "Twitter" title = "TWITTER"><p>@mrkuulit</p></button></div>
-                <div><button class = "github"><img src = "/Images/github_1.png" alt = "Github" title = "GITHUB"><p>alunyapatrick2022</p></button></div>
-                <div><button class = "facebook"><img src = "/Images/fb_1.png" alt = "fb-icon" title = "FACEBOOK"><p>Patrick Alunya</p></button></div>
+                <div><a href="mailto:patrickalunya106@gmail.com"><img src = "/Images/gmail-icon_2.png" alt = "gmail" title = "GMAIL">patrickalunya106@gmail.com</a></div>
+                <div><a href="tel:+254115348341"><img src = "/Images/phone-me_1.png" alt = "Phone" title = "Phone">+254115348341</a></div>
+                <div><a href = "linkedin"><img src = "/Images/linkedin_1.png" alt = "linkedin-icon" title = "Linkedin">Patrick Alunya</a></div>
+                <div><a href = "https://twitter.com/mrkuulit"><img src = "/Images/x.png" alt = "Twitter" title = "TWITTER">@mrkuulit</a></div>
+                <div><a href = "github"><img src = "/Images/github_1.png" alt = "Github" title = "GITHUB">alunyapatrick2022</a></div>
+                <div><a href = "https://www.facebook.com/profile.php?id=100087308284127"><img src = "/Images/fb_1.png" alt = "fb-icon" title = "FACEBOOK">Patrick Alunya</a></div>
             </div><br><br> 
         </section>
         <section class="link">
             <div>
-                <button class = "codecoretech-link">www.codecoretechnologies.com</button> 
+                <a href = "codecoretech-link">www.codecoretechnologies.com</a> 
             </div><br><br>
         </section>
         <section class="floating-wa-icon">
@@ -151,7 +151,7 @@
         <hr>
         <section class="footer">
             <div>
-                <p >&copy  Copyright - CodeCoreTechnologies | All Rights Reserved.</p>
+                <p >&copy  Copyright - <a href = "www.codecoretechnologies.com">CodeCoreTechnologies</a> | All Rights Reserved.</p>
             </div> 
         </section>
     </main>
